# agent-drt

./: .gitignore
.github/workflows/: dotnet-build-and-test.yml  dotnet-format.yml  python-code-quality.yml
dotnet/: Directory.Packages.props  agent-framework-dotnet.slnx
dotnet/samples/: Directory.Build.props
dotnet/samples/AgentWebChat/: .gitignore  AgentWebChat.sln  Directory.Build.props  Polyglot.md  README.md  TODO.md
dotnet/samples/AgentWebChat/AgentContracts/: AbsoluteUriAttribute.cs  AgentContracts.csproj  AgentContractsJsonContext.cs  AgentContractsJsonUtilities.cs  AgentDiscoveryCard.cs  ItemResourceExtensions.cs  WorkerProcessMetadata.cs  WorkerRegistrationRequest.cs  WorkerRegistrationResponse.cs
dotnet/samples/AgentWebChat/AgentGateway/: A2AHttpApi.cs  AgentDiscoveryHttpApi.cs  AgentGateway.csproj  AgentGatewayJsonUtilities.cs  AgentGatewayOptions.cs  ForwardingHttpClientProvider.cs  Program.cs  README.md  WorkerDiscoveryCache.cs  WorkerHealthCheckService.cs  WorkerHttpForwarder.cs  WorkerManagementHttpApi.cs  WorkerRegistry.cs  appsettings.Development.json
dotnet/samples/AgentWebChat/AgentGateway.UnitTests/: AgentGateway.UnitTests.csproj  OrleansTestClusterFixture.cs
dotnet/samples/AgentWebChat/AgentWebChat.AgentHost/: AgentFrameworkWebApplicationExtensions.cs  AgentWebChat.AgentHost.csproj  ConfigRolloutAgent.cs  DurableAgent.cs  DurableChatClientAgent.cs  Program.cs  (+3 more)
dotnet/samples/AgentWebChat/PythonAgent/: .gitignore  README.md  pyproject.toml
dotnet/samples/AgentWebChat/PythonAgent/src/: main.py
dotnet/samples/AgentWebChat/PythonAgent/src/agent_worker/: __init__.py  main.py  models.py  streaming.py  telemetry.py
dotnet/samples/AgentWebChat/PythonAgent/src/agent_worker/agents/: __init__.py  pig_latin.py  travel_itinerary.py
dotnet/samples/AgentWebChat/PythonAgent/src/agents/: __init__.py  pig_latin.py  travel_itinerary.py
dotnet/samples/AgentWebChat/python-agent-worker/: README.md  pyproject.toml
dotnet/samples/AgentWebChat/python-agent-worker/agent_worker/: __init__.py  agent.py  helpers.py  telemetry.py  worker.py
dotnet/samples/AgentWebChat/python-agent-worker/agent_worker/protocol/: __init__.py  models.py
dotnet/samples/AgentWebChat/python-agent-worker/examples/: hello_agent.py
dotnet/samples/AgentWebChat/python-agent-worker/tests/: conftest.py  test_agent.py  test_helpers.py  test_worker.py
dotnet/src/Microsoft.Agents.AI.DevUI/: DevUIExtensions.cs  EntitiesApiExtensions.cs  IEntityProvider.cs  MetaApiExtensions.cs  RegisteredServicesEntityProvider.cs
dotnet/src/Microsoft.Agents.AI.Hosting.OpenAI/: EndpointRouteBuilderExtensions.Responses.cs  IdGenerator.cs  MemoryCacheExtensions.cs  OpenAIHostingJsonUtilities.cs  ServiceCollectionExtensions.cs  SseJsonResult.cs
(+282 files in other folders)
