[project]
name = "agent-worker"
version = "0.1.0"
description = "Python agent worker for AgentWebChat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "pydantic-ai>=0.0.14",
    "azure-identity>=1.19.0",
    "openai>=1.58.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
