[project]
name = "agent-worker"
version = "0.1.0"
description = "Python agent worker for AgentWebChat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-agent-worker",
    "uvicorn[standard]>=0.30.0",
    "pydantic-ai>=0.0.14",
    "azure-identity>=1.19.0",
    "openai>=1.58.1",
    "tiktoken>=0.8.0",
]

[tool.uv.sources]
python-agent-worker = { path = "../python-agent-worker", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
